// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deriveAll – characterisation > auto: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 8199.67,
      "bound": 5340.83,
      "deficitMonthly": 0,
      "sp": 2858.84,
      "year": 2026,
    },
    {
      "avail": 9486.28,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 5136.28,
      "year": 2031,
    },
    {
      "avail": 11573.08,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 8023.08,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 300,
    "avail": 8199.67,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2858.84,
    "immoNetCF": -1700.33,
    "quote": 34.87,
    "saldo": 0,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 842000,
      "cons": 842000,
      "debt": 658000,
      "opt": 842000,
      "sp": 2859,
    },
    {
      "age": 45,
      "base": 1226792,
      "cons": 1076024,
      "debt": 536159,
      "opt": 1392887,
      "sp": 5136,
    },
    {
      "age": 50,
      "base": 1831992,
      "cons": 1496034,
      "debt": 272990,
      "opt": 2237698,
      "sp": 8023,
    },
    {
      "age": 55,
      "base": 2691279,
      "cons": 2118446,
      "debt": 198876,
      "opt": 3447311,
      "sp": 9667,
    },
    {
      "age": 60,
      "base": 3579407,
      "cons": 2662865,
      "debt": 111920,
      "opt": 4887366,
      "sp": 7571,
    },
    {
      "age": 65,
      "base": 4462106,
      "cons": 3080284,
      "debt": 10000,
      "opt": 6597121,
      "sp": 1375,
    },
    {
      "age": 70,
      "base": 5423766,
      "cons": 3432430,
      "debt": 10000,
      "opt": 8769897,
      "sp": 1942,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 2722.7,
    },
    {
      "cls": "Krypto",
      "monthly": 136.14,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > complex: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 8164.5,
      "bound": 5340.83,
      "deficitMonthly": 0,
      "sp": 2500,
      "year": 2026,
    },
    {
      "avail": 9429.24,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 1831.38,
      "year": 2031,
    },
    {
      "avail": 11488.14,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 2901.35,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 264.83,
    "avail": 8164.5,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2500,
    "immoNetCF": -1700.33,
    "quote": 30.62,
    "saldo": 323.67,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 842000,
      "cons": 842000,
      "debt": 658000,
      "opt": 842000,
      "sp": 2500,
    },
    {
      "age": 45,
      "base": 1263419,
      "cons": 1109982,
      "debt": 536159,
      "opt": 1431627,
      "sp": 1831,
    },
    {
      "age": 50,
      "base": 1804710,
      "cons": 1451179,
      "debt": 272990,
      "opt": 2229100,
      "sp": 2901,
    },
    {
      "age": 55,
      "base": 2616680,
      "cons": 2011906,
      "debt": 198876,
      "opt": 3413041,
      "sp": 3126,
    },
    {
      "age": 60,
      "base": 3509343,
      "cons": 2547406,
      "debt": 111920,
      "opt": 4885941,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 4555566,
      "cons": 3102183,
      "debt": 10000,
      "opt": 6811960,
      "sp": 1151,
    },
    {
      "age": 70,
      "base": 5798825,
      "cons": 3670487,
      "debt": 10000,
      "opt": 9384094,
      "sp": 1644,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > complex: filtered to one owner 1`] = `
{
  "cashflowSample": [
    {
      "avail": 4259,
      "bound": 4552.5,
      "deficitMonthly": 93.5,
      "sp": 0,
      "year": 2026,
    },
    {
      "avail": 4942.32,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 1392.32,
      "year": 2031,
    },
    {
      "avail": 5715.44,
      "bound": 3550,
      "deficitMonthly": 0,
      "sp": 2165.44,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 0,
    "avail": 4259,
    "bound": 4552.5,
    "deficitMonthly": 93.5,
    "eff": 0,
    "immoNetCF": -941,
    "quote": 0,
    "saldo": -293.5,
    "streamExpense": 3850,
    "streamIncome": 5200,
  },
  "debt": 230000,
  "gross": 560000,
  "loans": [
    {
      "annuitat": 552.5,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 921,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 330000,
  "projection": [
    {
      "age": 40,
      "base": 330000,
      "cons": 330000,
      "debt": 230000,
      "opt": 330000,
      "sp": 0,
    },
    {
      "age": 45,
      "base": 436023,
      "cons": 380211,
      "debt": 173080,
      "opt": 497313,
      "sp": 1392,
    },
    {
      "age": 50,
      "base": 690615,
      "cons": 562646,
      "debt": 141495,
      "opt": 844578,
      "sp": 2165,
    },
    {
      "age": 55,
      "base": 1220347,
      "cons": 986800,
      "debt": 104438,
      "opt": 1525709,
      "sp": 3040,
    },
    {
      "age": 60,
      "base": 1792983,
      "cons": 1385184,
      "debt": 60960,
      "opt": 2363525,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 2296897,
      "cons": 1629365,
      "debt": 10000,
      "opt": 3298439,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 2735511,
      "cons": 1710822,
      "debt": 10000,
      "opt": 4402595,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.14,
}
`;

exports[`deriveAll – characterisation > complex: projection limited to one asset class 1`] = `
{
  "cashflowSample": [
    {
      "avail": 9100,
      "bound": 5190.83,
      "deficitMonthly": 0,
      "sp": 2500,
      "year": 2026,
    },
    {
      "avail": 10189.24,
      "bound": 3400,
      "deficitMonthly": 0,
      "sp": 1831.38,
      "year": 2031,
    },
    {
      "avail": 11410.52,
      "bound": 3400,
      "deficitMonthly": 0,
      "sp": 2901.35,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 264.83,
    "avail": 8164.5,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2500,
    "immoNetCF": -1700.33,
    "quote": 30.62,
    "saldo": 323.67,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 250000,
      "cons": 250000,
      "debt": 50000,
      "opt": 250000,
      "sp": 2500,
    },
    {
      "age": 45,
      "base": 467531,
      "cons": 432974,
      "debt": 0,
      "opt": 504890,
      "sp": 1831,
    },
    {
      "age": 50,
      "base": 762978,
      "cons": 669746,
      "debt": 0,
      "opt": 871606,
      "sp": 2901,
    },
    {
      "age": 55,
      "base": 1320014,
      "cons": 1126669,
      "debt": 0,
      "opt": 1561367,
      "sp": 3126,
    },
    {
      "age": 60,
      "base": 1902190,
      "cons": 1533927,
      "debt": 0,
      "opt": 2390138,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 2514224,
      "cons": 1880550,
      "debt": 0,
      "opt": 3410379,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 3188015,
      "cons": 2176461,
      "debt": 0,
      "opt": 4724997,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > demo: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 10036.67,
      "bound": 2500,
      "deficitMonthly": 0,
      "sp": 7536.67,
      "year": 2026,
    },
    {
      "avail": 11616.53,
      "bound": 2500,
      "deficitMonthly": 0,
      "sp": 9116.53,
      "year": 2031,
    },
    {
      "avail": 13531.04,
      "bound": 2500,
      "deficitMonthly": 0,
      "sp": 11031.04,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 1416.67,
    "avail": 10036.67,
    "bound": 2500,
    "deficitMonthly": 0,
    "eff": 7536.67,
    "immoNetCF": 120,
    "quote": 75.09,
    "saldo": 0,
    "streamExpense": 2500,
    "streamIncome": 8500,
  },
  "debt": 130000,
  "gross": 1560000,
  "loans": [
    {
      "annuitat": 850,
      "id": "a7",
      "yrsLeft": 17,
    },
  ],
  "net": 1430000,
  "projection": [
    {
      "age": 35,
      "base": 1430000,
      "cons": 1430000,
      "debt": 130000,
      "opt": 1430000,
      "sp": 7537,
    },
    {
      "age": 40,
      "base": 2630785,
      "cons": 2400330,
      "debt": 99176,
      "opt": 2883852,
      "sp": 9117,
    },
    {
      "age": 45,
      "base": 4490618,
      "cons": 3805134,
      "debt": 62467,
      "opt": 5313442,
      "sp": 11031,
    },
    {
      "age": 50,
      "base": 7344779,
      "cons": 5817562,
      "debt": 18749,
      "opt": 9341264,
      "sp": 13384,
    },
    {
      "age": 55,
      "base": 11711065,
      "cons": 8691046,
      "debt": 0,
      "opt": 16001278,
      "sp": 17166,
    },
    {
      "age": 60,
      "base": 18339037,
      "cons": 12748434,
      "debt": 0,
      "opt": 26958891,
      "sp": 20873,
    },
    {
      "age": 65,
      "base": 28381177,
      "cons": 18469255,
      "debt": 0,
      "opt": 44962973,
      "sp": 25624,
    },
    {
      "age": 70,
      "base": 43551399,
      "cons": 26508464,
      "debt": 0,
      "opt": 74491791,
      "sp": 31794,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 7536.67,
    },
  ],
  "wavgReturn": 7.44,
}
`;
